# SmartPointers_Cpp

./: CMakeLists.txt  README.md  main.cpp  shared.hpp
.ccls-cache/@@home@benmaia@CTW@Academy@ctw-academy-exercises@memory_managment@SmartPointers_Cpp/: @home@benmaia@.local@share@nvim@lsp_servers@ccls@clang-resource@include@__stddef_max_align_t.h.blob  @home@benmaia@.local@share@nvim@lsp_servers@ccls@clang-resource@include@stdarg.h.blob  @home@benmaia@.local@share@nvim@lsp_servers@ccls@clang-resource@include@stddef.h.blob  @home@benmaia@.local@share@nvim@lsp_servers@ccls@clang-resource@include@stdint.h.blob  @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@c++@11@algorithm.blob  @usr@include@c++@11@array.blob  @usr@include@c++@11@backward@auto_ptr.h.blob  @usr@include@c++@11@backward@binders.h.blob  @usr@include@c++@11@bit.blob  @usr@include@c++@11@bits@algorithmfwd.h.blob  @usr@include@c++@11@bits@align.h.blob  @usr@include@c++@11@bits@alloc_traits.h.blob  @usr@include@c++@11@bits@allocated_ptr.h.blob  @usr@include@c++@11@bits@allocator.h.blob  @usr@include@c++@11@bits@atomic_base.h.blob  @usr@include@c++@11@bits@atomic_lockfree_defines.h.blob  @usr@include@c++@11@bits@basic_ios.h.blob  @usr@include@c++@11@bits@basic_ios.tcc.blob  @usr@include@c++@11@bits@basic_string.h.blob  @usr@include@c++@11@bits@basic_string.tcc.blob  @usr@include@c++@11@bits@char_traits.h.blob  @usr@include@c++@11@bits@charconv.h.blob  @usr@include@c++@11@bits@concept_check.h.blob  @usr@include@c++@11@bits@cxxabi_forced.h.blob  (+182 more)
(+4 files in other folders)
